--- a/index.html
+++ b/index.html
@@ -1,47 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>My Favorite Recipe!</title>
+<title>CSIT 121 Labs and Projects Menu</title>
 <meta charset="utf-8">
 </head>
 <body>
-<h1>Tres Leches Cake Recipe<3</h1><br>
-
-
-
-<h2>Recipe Published by Lauren Allen on <a href= "https://tastesbetterfromscratch.com/tres-leches-cake/"> Tastes Better from Scratch </a></h2>
-
-<h3>~Ingredients~
-</h3>
-
-</ol>
-    <ul>
-      <li>Flour</li> <li>Baking Powder</li>
-    <li>Milk</li>
-    <li>Vanilla Extract</li>
-    <li>Sugar</li>
-    <li>Evaporated Milk</li>
-    <li>Sweetened Condensed Milk</li>
-    <li>Whole Milk</li>
-    <li>Heavy Whipping Cream</li>
-      </ul>
-
-      <h3>~Prep Steps~</h3>
-      <h4> PLEASE NOTE ALL PREP STEP INFORMATION IS FROM: <a href= "https://tastesbetterfromscratch.com/"> Tastes Better from Scratch </a></h4>
-    <ol>
-      <li>Combine the flour, baking powder, and salt in a medium bowl.</li>
-    <li>Separate whisked eggs into two separte bowls.</li>
-    <li>Add 3/4 cup of sugar to the egg yolk bowl and mix until pale yellow. Then add 1/3 cup of milk and vanilla.</li>
-     <li>Stir to combine, then pour egg yolk mixture into flower.</li>
-    <li>Gently stir to combine but do not mix.</li>
-    <li>Use electric beaters to beat the egg whites on high speed. As they begin to whip into stiff peaks, gradually mix in the remaining   1/4 cup of sugar. Fold the stiffly beaten egg whites into the batter gently, scraping the bottom and sides of the bowl, until combined.</li>
-    <li>Pour batter into pan and smooth it into an even layer. Bake for 25 to 35 minutes.Remove from the oven and allow cake to cool completely.</li>
-<li>Combine the evaporated milk, sweetened condensed milk, and whole milk in a small bowl. Once the cake has cooled use a fork to poke holes all over the top of the cake. </li>
-<li>Slowly pour the milk mixture over the the top of the cake, making sure to pour near the edges and all around. Refrigerate the cake for at least 1 hour or overnight.</li>
-<li>Whip enough heavy cream to cover atop the cake. Once heavy whipping cream is spreaded, add a sprinkle of cinnamon and freshly slices strawberries on top.</li>
-
-</ol>
-
-<h3>~Why This Recipe Is My Fave~</h3>
-<p>This is my favorite recipe because it dives all the way down to how  to make a tres leches from scratch. My sister and I would make tres leches cakes for thanksgiving for our family, so it's always nostalgic. It's taste and texture is different but immaculate! </p>
+<header> <h1> CSIT 121 Labs and Projects Menu</h1></header>
+<main>
+  <nav>
+    <ul> 
+      <li><a href= "lab01">Lab 01</a></li>
+      <li><a href= "lab01">Lab 02</a></li>
+      <li><a href= "lab03">Lab 03</a></li>
+</ul>
+</nav>
+</main>
+</body>
+</html>
 
