--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li><a href= "lab01">Lab 01</a></li>
       <li><a href= "lab02">Lab 02</a></li>
       <li><a href= "lab03">Lab 03</a></li>
-      <li><a href= "home">Project 1</a></li>
+      <li><a href= "project1/index.html">Project 1</a></li>
 </ul>
 </nav>
 </main>
