--- a/project1/index.html
+++ b/project1/index.html
@@ -11,7 +11,7 @@
 <h1> Kamryn's Three Things!</h1> </header>
 
   <nav>
-<h2> <a href="MyThreeThings.html"> Home</a>
+<h2> <a href="index.html"> Home</a>
   <a href="BeeandPuppycat.html">Thing1</a> 
 <a href="Videogames.html"> Thing2</a> 
 <a href= "Berserk.html">Thing3</a>
