--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href= "lab03">Lab 03</a></li>
       <li><a href= "lab04">Lab 04</a></li>
       <li><a href= "project1/index.html">Project 1</a></li>
+      <li><a href= "lab06">Lab 06</a></li>
 </ul>
 </nav>
 </main>
