--- a/lab06/index.html
+++ b/lab06/index.html
@@ -12,7 +12,7 @@ content="width=device-width, initial-scale=1.0">
 <h1>Tres Leches Cake Recipe</h1><br>
   
 
-<img src="images/Trescake.jpg" height="275" width="400" alt="A lovely example right here!" >
+<img src="images/Trescake.jpg" alt="A lovely example right here!" >
 
 
 <h2>Recipe Published by Lauren Allen on <a href= "https://tastesbetterfromscratch.com/tres-leches-cake/"> Tastes Better from Scratch </a></h2>
