--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href= "project1/index.html">Project 1</a></li>
       <li><a href= "lab06">Lab 06</a></li>
       <li><a href= "lab07">Lab 07</a></li>
+      <li><a href= "lab08">Lab 08</a></li>
 </ul>
 </nav>
 </main>
