--- a/lab09/index.html
+++ b/lab09/index.html
@@ -137,7 +137,7 @@ value="yes"> Italian <br><br>
 </form>
 <br><br><br>
 <div class="audiobox">
-<audio controls="controls">
+<audio controls>
   <source src="Recording.M4A" type="audio/mp4">
 </audio>
   <a href="soundloop.mp3">Download the Audio File</a> (MP3)
