--- a/lab09/index.html
+++ b/lab09/index.html
@@ -138,7 +138,7 @@ value="yes"> Italian <br><br>
 <br><br><br>
 <div class="audiobox">
 <audio controls>
-  <source src="Recording.M4A" type="audio/mp4">
+  <source src="Recording.M4A" type="audio/mpeg">
 </audio>
   <a href="soundloop.mp3">Download the Audio File</a> (MP3)
 </div>
