--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li><a href= "lab08">Lab 08</a></li>
       <li><a href= "lab09">Lab 09</a></li>
       <li><a href= "lab10">Lab 10</a></li>
+      <li><a href= "Final/index.html">Final Project</a></li>
 </ul>
 </nav>
 </main>
